clang/test/BSC/Negative/SafeZone/unsafe_unary_expr/unsafe_unary_expr.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
// UNSUPPORTED: ENABLE_BSC_FUTURE

int main(void) {
  int a = 0;
  int *b = &a;
  safe {
    ++a;          // ok: ++ on integers is allowed
    --a;          // ok: -- on integers is allowed
    int c = *b;   // expected-error {{'*' operator is forbidden in the safe zone}}
    // Note: [] operator restriction on raw pointers requires ENABLE_BSC_FUTURE
    int d = b[0];
    int x = 0;
    const int *borrow cb = &const x;
    int y = *cb;
    int *borrow mb = &mut x;
    int z = ++*mb; // expected-error {{conversion from type 'void' to 'int' is forbidden in the safe zone}} expected-note {{prefix/postfix '++' and '--' in safe zone produce void; use only for side effect}}
    int w = *mb++; //#1
    int * p = &x; // expected-error {{'&' operator is forbidden in the safe zone}}
  }
  return 0;
}

// expected-error@#1 {{indirection requires pointer operand ('void' invalid)}}
// expected-error@#1 {{'++' operator is forbidden in the safe zone}}
// expected-error@#1 {{invalid argument type 'int *borrow' to unary expression}}